Committed by Dashamoolam Dhamu

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="checkbox checkbox-circle checkbox-success checkbox-small">
                         <input type="checkbox" id="checkbox1">
                         <label for="checkbox1">Keep me logged in</label>
-                        <a href="#" class="pull-right">Forget your password?</a>
+                        <a href="#" class="pull-right">Forget your Git Commands?</a>
                     </div>
                 </div>
                 <div class="login-panel-section">
